docs: Add swagger docs of StoreCert handler
